--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@
   font-family: "Poppins", sans-serif;
   text-decoration: none;
 }
+
+body {
+  overflow-y: scroll;
+}
+
+body::-webkit-scrollbar {
+  display: none;
+}
