--- a/src/styles/section.css
+++ b/src/styles/section.css
@@ -217,3 +217,93 @@ button {
 .contact-form-container input::placeholder {
   color: #a6a4a4;
 }
+
+.hidden {
+  display: none;
+}
+
+.class1 {
+  display: block;
+}
+
+.courses-title {
+  display: block;
+}
+
+@media (max-width: 1200px) {
+  .section-container {
+    flex-direction: column;
+    /* margin-top: 90px; */
+  }
+
+  .section-list-divisor {
+    flex-direction: column;
+    display: flex;
+  }
+
+  .left-division {
+    width: 100%;
+    order: 1;
+  }
+
+  .right-division {
+    order: 2;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    width: 100%;
+  }
+
+  .contact-section-container {
+    order: 3;
+  }
+
+  .hidden {
+    display: block;
+    margin-top: 10px;
+  }
+
+  .class1 {
+    display: none;
+  }
+
+  .courses-title {
+    display: block;
+    margin-left: 0px;
+  }
+}
+
+@media (max-width: 860px) {
+  .section-container {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 10px;
+  }
+
+  #item-logo {
+    display: none;
+  }
+}
+
+@media (max-width: 450px) {
+  .section-container {
+    margin-left: 15px;
+    margin-right: 10px;
+    padding-left: 10px;
+  }
+
+  .item-details-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
+  .popup {
+    display: none;
+  }
+
+  .contact-form-section-container {
+    padding: 0px 10px;
+  }
+}
